ggplot2 1.0.1.9000
----------------------------------------------------------------

* All datasets have class `tbl_df` so if you also use dplyr, you won't
  accidentally print all the data. `economics` has been brought up to date to
  2015-04-01.

* `geom_text()` gains `nudge_x` and `nudge_y` arguments to offset labels from
  the x & y position (#1120). `check_overlap = TRUE` provides a simple
  resolution to label overplotting (#1039).

* `geom_crossbar()` sets grouping correctly so you can display multiple
  crossbars on one plot. It also makes the default `fatten` argument a little
  bigger to make the middle line more obvious (#1125).

* `guide_colorbar()` no longer fails when the legend is empty - previously
  this often masked misspecifications elsewhere in the plot (#967)

* `Geom`, `Stat` and `Position` are now exported, making it easier to create
  new geoms, stats and positions in other packages (#989).

* New `theme_void()`, which is completely empty. Useful for plots with non
  standard coordinates or for producing numerical drawings with R. (@jiho, #976)

* New `geom_curve()` that adds curved lines, similar to `geom_segment()`.
  (@veraanadi, #1088)

* Create correct legend for continuous color even if there is only one color
  (@krlmlr, #943)

* Position adjustments no longer warn about potentially varying ranges
  because the problem rarely occurs in practice and there are currently a
  lot of false positives since I don't understand exactly what FP criteria
  I should be testing.

* New dark-backgrounded theme, `theme_dark()`, meant to make colours pop out
  (@jiho, #1018)

* `aes_string()` now only parses character inputs. This problems bugs when
  using it with numbers and non default `OutDec` settings (#1045).

* `cut_number()` gives error message if insufficient data values to
  produce requested bins (#1046).

* `facet_wrap()` and `facet_grid()` now allow you to use non-standard